# aoflagger

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CMakeVersionInfo.txt  Doxyfile.in  README  RELEASE.md  aoflagger_2.10.0.orig.tar.bz2.delta  aoflagger_2.10.0.orig.tar.bz2.id  aoflagger_2.8.0.orig.tar.bz2.delta  aoflagger_2.8.0.orig.tar.bz2.id  aoflagger_2.9.0.orig.tar.bz2.delta  aoflagger_2.9.0.orig.tar.bz2.id  setup.py  version.h.in
aocommon/: CMakeLists.txt  aocommon.kdev4
aocommon/include/aocommon/: banddata.h  uvector.h
aocommon/tests/: tparallelfor.cpp  tthreadpool.cpp  tuvector.cpp
python/: CMakeLists.txt  pyfunctions.cpp  pyfunctions.h  pyinterface.cpp  pythonstrategy.cpp  pythonstrategy.h
src/: CMakeLists.txt  aoflagger.cpp  aofrequencyfilter.cpp  aolua.cpp  aoqplot.cpp  aoquality.cpp  aotest.cpp  badstations.cpp  baseexception.h  colormapper.cpp  msinfo.cpp  rfigui.cpp  version.h
src/aoluarunner/: baselineiterator.cpp  baselineiterator.h  options.h  runner.cpp  runner.h  writethread.cpp  writethread.h
src/aoqplot/: aoqplotwindow.cpp  aoqplotwindow.h  baselineplotpage.cpp  baselineplotpage.h  blengthplotpage.h  datawindow.cpp  frequencyplotpage.h  grayscaleplotpage.cpp  grayscaleplotpage.h  histogrampage.cpp  histogrampage.h  plotsheet.h  summarypage.h  timefrequencyplotpage.cpp  timefrequencyplotpage.h  twodimensionalplotpage.cpp  twodimensionalplotpage.h
src/aoqplot/controllers/: antennapagecontroller.h  aoqpagecontroller.h  aoqplotcontroller.cpp  aoqplotcontroller.h  aoqplotpagecontroller.cpp  aoqplotpagecontroller.h  baselinepagecontroller.cpp  baselinepagecontroller.h  blengthpagecontroller.h  frequencypagecontroller.h  heatmappagecontroller.cpp  heatmappagecontroller.h  histogrampagecontroller.cpp  histogrampagecontroller.h  polbuttonsetcontroller.h  tfpagecontroller.cpp  tfpagecontroller.h  timepagecontroller.h
src/gui/: imagecomparisonwidget.cpp  imagecomparisonwidget.h  imagewidget.cpp  plotframe.cpp  plotframe.h  progresswindow.cpp  rfiguiwindow.cpp  rfiguiwindow.h
src/gui/controllers/: rfiguicontroller.cpp  rfiguicontroller.h
src/gui/plot/: dimension.h  plot2d.cpp  plot2d.h  plot2dpointset.h  plotmanager.h  plotpropertieswindow.cpp  plotpropertieswindow.h  system.h
src/gui/quality/: baselineplotpage.cpp  grayscaleplotpage.cpp  grayscaleplotpage.h
src/gui/strategyframes/: foreachpolarisationframe.h
src/imaging/: defaultmodels.h  model.cpp  model.h  observatorium.h  uvimager.cpp  uvimager.h
src/interface/: aoflagger.cpp  aoflagger.h
src/lua/: data.cpp  data.h  functions.cpp  functions.h  luastrategy.cpp  luastrategy.h  luathreadgroup.h  tools.h
src/msio/: baselinematrixloader.cpp  baselinematrixloader.h  baselinereader.cpp  baselinereader.h  directbaselinereader.cpp  directbaselinereader.h  fitsfile.cpp  fitsfile.h  indirectbaselinereader.cpp  indirectbaselinereader.h  memorybaselinereader.cpp  memorybaselinereader.h  msselection.h  parmtable.h  pngfile.cpp  pngfile.h  rawdescfile.h  reorderedfilebuffer.h  rspreader.cpp  rspreader.h  singlebaselinefile.cpp  singlebaselinefile.h  spatialtimeloader.cpp  spatialtimeloader.h
src/plot/: colorscale.cpp  colorscale.h  dimension.h  heatmapplot.cpp  heatmapplot.h  horizontalplotscale.cpp  horizontalplotscale.h  legend.cpp  legend.h  plot2d.cpp  plot2d.h  plot2dpointset.h  plotpropertieswindow.cpp  plotpropertieswindow.h  plotwidget.h  system.h  tickset.h  title.cpp  title.h  verticalplotscale.cpp  verticalplotscale.h
src/python/: data.h  functions.cpp  functions.h  pyinterface.cpp  scriptdata.h
src/quality/: baselinestatisticsmap.h  defaultstatistics.h  histogramcollection.h  histogramtablesformatter.h  loghistogram.h  qualitytablesformatter.cpp  qualitytablesformatter.h  rayleighfitter.cpp  statisticalvalue.h  statisticscollection.h  statisticsderivator.h
src/ref/: reffileentry.h  reffileexception.h
src/remote/: client.cpp  clusteredobservation.cpp  clusteredobservation.h  observationtimerange.h  processcommander.cpp  processcommander.h  remoteprocess.h  serverconnection.cpp  serverconnection.h  vdsfile.cpp  vdsfile.h
src/rfigui/: addstrategyactionmenu.h  complexplaneplotwindow.cpp  editstrategywindow.cpp  editstrategywindow.h  gotowindow.cpp  gotowindow.h  heatmapwidget.cpp  heatmapwidget.h  highlightwindow.h  histogramwindow.h  imagecomparisonwidget.cpp  imagecomparisonwidget.h  imageplanewindow.cpp  imageplanewindow.h  imagepropertieswindow.cpp  imagepropertieswindow.h  interfaces.h  msoptionwindow.cpp  msoptionwindow.h  plotframe.cpp  plotframe.h  plotwindow.cpp  plotwindow.h  progresswindow.cpp  progresswindow.h  rfiguimenu.cpp  rfiguimenu.h  rfiguiwindow.cpp  rfiguiwindow.h  strategywizardwindow.cpp  strategywizardwindow.h
src/rfigui/controllers/: imagecomparisoncontroller.cpp  imagecomparisoncontroller.h  rfiguicontroller.cpp  rfiguicontroller.h
src/rfigui/strategyframes/: applybandpassframe.h  calibratebandpassframe.h  changeresolutionframe.h  highpassfilterframe.h  iterationframe.h  plotframe.h  restorechannelrangeframe.h  statisticalflaggingframe.h  sumthresholdframe.h
src/strategy/actions/: absthresholdaction.h  action.h  all.h  applybandpassaction.h  baselineselectionaction.cpp  baselineselectionaction.h  calibratebandpassaction.cpp  calibratebandpassaction.h  calibratepassbandaction.cpp  calibratepassbandaction.h  changeresolutionaction.cpp  changeresolutionaction.h  (+51 more)
src/structures/: antennainfo.h  arraycolumniterator.h  colormap.cpp  colormap.h  date.h  image2d.cpp  image2d.h  mask2d.cpp  mask2d.h  measurementset.cpp  measurementset.h  msiterator.cpp  msiterator.h  msmetadata.cpp  msmetadata.h  msrowdata.h  msrowdataext.h  polarization.h  samplerow.cpp  samplerow.h  segmentedimage.h  spatialmatrixmetadata.h  timefrequencydata.cpp  timefrequencydata.h  timefrequencymetadata.h  types.h  xyswappedmask2d.h
src/util/: ffttools.cpp  ffttools.h  integerdomain.h  lane.h  logger.cpp  logger.h  multiplot.cpp  multiplot.h  numberparser.h  parameter.h  plot.cpp  plot.h  progresslistener.h  serializable.h  stopwatch.cpp  stopwatch.h
(+677 files in other folders)
